hardwood#27 Initial support for using the Vector API, if present